cli/tests/testdata/test/non_error_thrown.out
running 6 tests from [WILDCARD]/non_error_thrown.ts
foo ... FAILED ([WILDCARD])
bar ... FAILED ([WILDCARD])
baz ... FAILED ([WILDCARD])
qux ... FAILED ([WILDCARD])
quux ... FAILED ([WILDCARD])
quuz ... FAILED ([WILDCARD])

 ERRORS 

foo => [WILDCARD]/non_error_thrown.ts:1:6
error: undefined

bar => [WILDCARD]/non_error_thrown.ts:5:6
error: null

baz => [WILDCARD]/non_error_thrown.ts:9:6
error: 123

qux => [WILDCARD]/non_error_thrown.ts:13:6
error: "Hello, world!"

quux => [WILDCARD]/non_error_thrown.ts:17:6
error: [ 1, 2, 3 ]

quuz => [WILDCARD]/non_error_thrown.ts:21:6
error: { a: "Hello, world!", b: [ 1, 2, 3 ] }

 FAILURES 

foo => [WILDCARD]/non_error_thrown.ts:1:6
bar => [WILDCARD]/non_error_thrown.ts:5:6
baz => [WILDCARD]/non_error_thrown.ts:9:6
qux => [WILDCARD]/non_error_thrown.ts:13:6
quux => [WILDCARD]/non_error_thrown.ts:17:6
quuz => [WILDCARD]/non_error_thrown.ts:21:6

FAILED | 0 passed | 6 failed ([WILDCARD])

error: Test failed
